# azure-sla-evidence-kit

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-deploy.yml  monthly.yml
infra/: deploy.sh  main.bicep
slas/: azure_sla_catalog.yaml
src/azsla/: __init__.py  calculator.py  cli.py  discover.py  metrics.py  models.py  report.py  service_health.py  sla_catalog.py
src/azsla/db/: __init__.py  database.py  models.py  repository.py
src/azsla/web/: __init__.py  app.py  config.py  db_backup.py  main.py  rate_limit.py  scheduler.py  views.py
src/azsla/web/api/: __init__.py  collection.py  dashboard.py  export.py  metrics.py  resources.py  subscriptions.py
src/azsla/web/static/: styles.css
src/azsla/web/templates/: base.html  dashboard.html  dashboard_old.html  error.html  report_print.html  resource_detail.html  resources.html  settings.html
templates/: detailed.html.j2  executive.md.j2
tests/: conftest.py  test_api.py  test_calculator.py  test_repository.py
